Add API for getting all available exchange rate for given date
