# src/main/resources/openapi.yaml
@@ -41,6 +41,25 @@ paths:
         '500':
           description: Unhandled error by server
 
+  /api/v1/exchange-rates/{date}:
+    get:
+      summary: Get list of all available conversion rates for given date.
+      operationId: getConversionRatesByDate
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                minItems: 0
+                items:
+                  $ref: '#/components/schemas/CurrencyConversionRateResponse'
+        '404':
+          description: not found
+        '500':
+          description: Unhandled error by server
+
 components:
   schemas:
     CurrencyConversionRateResponse:
